--- a/assets/css/style-light.css
+++ b/assets/css/style-light.css
@@ -449,7 +449,7 @@ ol {
     height: 224px;
     position: relative;
     overflow: hidden;
-    background: linear-gradient(90deg, #3C58E3 -15%, #C2EBFF 58%, #5AB5E2 97%);
+    /* background: linear-gradient(90deg, #3C58E3 -15%, #C2EBFF 58%, #5AB5E2 97%); */
     border-radius: 30px 0 30px 0;
     flex: none;
 }
@@ -811,7 +811,7 @@ ol {
     opacity: 0.25;
 }
 .credential-area .credential-sidebar .img-box {
-    background: linear-gradient(90deg, #3C58E3 -15%, #C2EBFF 58%, #5AB5E2 97%);
+    /* background: linear-gradient(90deg, #3C58E3 -15%, #C2EBFF 58%, #5AB5E2 97%); */
     border-radius: 30px;
     margin-bottom: 40px;
 }
